GNOME Bugzilla – Bug 763971
No way to go back to notes after Trash view
Last modified: 2017-06-15 18:56:14 UTC
On certain conditions, there seems no way to go back to the notes available from Trash view, other than reopning Notes. How to reproduce: 1. Create some notes 2. Move any one (or more) notes to trash 3. Open trash via Application menu -> View trash 4. Now Click 'Empty trash' or select all notes in trash and delete Now the back button is replaced with New button, but the notes that are not deleted are not listed. Once the application is re-opened other notes are shown.
Created attachment 353857 [details] [review] main-toolbar: Stuck in Trash View When you empty trash, in trash view, the main toolbar changes and you get stuck in that view. The only way to leave it is closing the application. That happens because the window state changes from ARCHIVE_VIEW to NO_NOTE, but this stated is shared by MAIN_VIEW as well, so it gets lost. This commit change the behavior to whenever you click empty trash, the window state continues to be ARCHIVE_VIEW, which is the default when you check Trash for the first time even without items.
Review of attachment 353857 [details] [review]: Pushed to master